--- a/ver-precio.html
+++ b/ver-precio.html
@@ -218,10 +218,11 @@
     #productName {
       font-size: 1.8rem;
       margin: 1rem 0;
-      color: #fff;
       font-weight: bold;
       word-break: break-word;
       line-height: 1.3;
+      color: #ffa500; /* Nuevo color naranja para el nombre del producto */
+      text-shadow: 0 0 8px rgba(255, 165, 0, 0.5); /* Sutil efecto de resplandor */
     }
 
     #productPrice {
