--- a/ver-precio.html
+++ b/ver-precio.html
@@ -75,27 +75,29 @@
       transform: scale(1.1);
     }
 
-    /* Campo de búsqueda oculto pero siempre activo para scanner/teclado */
+    /* Campo de búsqueda oculto pero siempre activo y enfocado */
     .hidden-search-container {
       position: absolute;
-      width: 100%;
+      width: 1px;
       height: 1px;
       padding: 0;
-      margin: 0;
+      margin: -1px;
       overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0;
     }
 
     #searchInput {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 1px;
       height: 1px;
       padding: 0;
       margin: 0;
       border: 0;
       opacity: 0;
-      pointer-events: none;
+      z-index: -1;
     }
 
     /* Contenedor de búsqueda manual (oculto por defecto) */
@@ -413,7 +415,7 @@
     <div class="loading-text">Buscando producto...</div>
   </div>
 
-  <!-- Campo de búsqueda oculto pero siempre activo para scanner/teclado -->
+  <!-- Campo de búsqueda oculto pero siempre activo y enfocado -->
   <div class="hidden-search-container">
     <input type="text" id="searchInput" autofocus>
   </div>
@@ -720,7 +722,7 @@
       maintainFocus();
       
       // Forzar el foco periódicamente por si se pierde
-      setInterval(maintainFocus, 1000);
+      setInterval(maintainFocus, 500);
       
       startMarketingSlider();
     };
